--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Awesome Presentation</title>
+    <title>From Functor Composition to Monad Transformers</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="keywords" content="Scala,Cats,Functor,Monad,Transformer">
+    <meta name="description" content="A talk on functor composition and monad transformers">
+
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
@@ -130,13 +134,15 @@ class: center
 
 # From Functor Composition
 # to Monad Transformers
-<br>
+<br/>
 ## &copy; Hermann Hueck
+<br/>
+[https://github.com/hermannhueck/monad-transformers](https://github.com/hermannhueck/monad-transformers)
 
 ---
 
 # Agenda
-<br>
+<br/>
 1. Nested Monads in for comprehensions
 2. Functors compose.
 3. Aside: Creating List[Int => Int] and List[Option[Int => Int]]
@@ -153,8 +159,8 @@ class: center
 ---
 
 ## Imports for Cats
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 import cats._, cats.data._, cats.implicits._
@@ -163,8 +169,8 @@ import cats._, cats.data._, cats.implicits._
 ---
 
 ## For comprehension for List[Option[Int]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val loi1: List[Option[Int]] = List(Some(1), None, Some(2), Some(3))
@@ -186,8 +192,8 @@ val result1: List[Option[Int]] =
 
 ## Compiler translates for comprehension to
 ## flatMap, map and withFilter
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val result2 =
@@ -208,8 +214,8 @@ loi1
 ---
 
 ## A nested for comprehension
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val result3: List[Option[Int]] =
@@ -230,9 +236,9 @@ for {
 
 ## Wanted:
 a for comprehension to process Ints nested in 2 contexts
-<br> ... something like this one:
-<br>
-<br>
+<br/> ... something like this one:
+<br/>
+<br/>
 
 ```scala
 // This code does not compile!
@@ -250,8 +256,8 @@ for {
 ---
 
 ## Mapping a List[Int] with a Functor[List]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val li = List(1, 2, 3)
@@ -270,8 +276,8 @@ val lSquared3 = Functor[List].map(li)(x => x * x) // invokes Functor[List].map
 
 ## Mapping a List[Option[Int]] with
 ## Functor[List] and Functor[Option]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val loi = List(Some(1), None, Some(2), Some(3))
@@ -293,8 +299,8 @@ val loSquared4 = cf.map(loi)(x => x * x)
 ---
 
 ## Pimping List[Option[A]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 implicit class PimpedListOptionA[A](list: List[Option[A]]) {
@@ -317,8 +323,8 @@ val loSquared5 = loi.fmap(x => x * x)
 ---
 
 ## Creating a List[Int => Int]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val lf1_1 = List((x:Int) => x * 1, (x:Int) => x * 2, (x:Int) => x * 3)
@@ -331,8 +337,8 @@ val lf1_2 = List((_:Int) * 1, (_:Int) * 2, (_:Int) * 3)
 ---
 
 ## Creating a List[Int => Int] from List[Int]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val lf1_3 = List(1, 2, 3).map(x => (y:Int) => y * x)
@@ -345,8 +351,8 @@ val lf1_4 = List(1, 2, 3).map(x => (_:Int) * x)
 ---
 
 ## Creating a List[Option[Int => Int]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val lf1 = lf1_4
@@ -364,8 +370,8 @@ val lof1 = lf1 map Option.apply
 
 ## Applying a List[Int => Int]
 ## to a List[Int] with Applicative
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val liResult = Applicative[List].ap(lf1)(li)
@@ -376,8 +382,8 @@ val liResult = Applicative[List].ap(lf1)(li)
 
 ## Applying a List[Option[Int => Int]]
 ## to a List[Option[Int]] with Applicative
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val loiResult = (Applicative[List] compose Applicative[Option]).ap(lof1)(loi)
@@ -392,8 +398,8 @@ val loiResult = (Applicative[List] compose Applicative[Option]).ap(lof1)(loi)
 ---
 
 ## Do Monads compose?
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val ca = Applicative[List] compose Applicative[Option]
@@ -405,13 +411,13 @@ val cm = Monad[List] compose Monad[Option]
 ---
 
 ## Do Monads compose?
-<br>
-<br>
+<br/>
+<br/>
 
 - Functors compose.
 - Applicatives compose.
 - **Monads do <u>NOT</u> compose!**
-<br>
+<br/>
 ### The solution: Monad Transformers
 
 ---
@@ -421,12 +427,12 @@ val cm = Monad[List] compose Monad[Option]
 ---
 
 ## What is OptionT?
-<br>
+<br/>
 - OptionT is a generic case class which encapsulates an F[Option[A]].
 - F is the generic type constructor of another monad like List, Future, Either, Id.
 - A Monad instance for OptionT (implementing pure and flatMap) must be provided in implicit scope in order to allow flatMapping over OptionT.
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 final case class OptionT[F[_], A](value: F[Option[A]]) {
@@ -451,8 +457,8 @@ object OptionT {
 
 ## Creating an OptionT[List, Int]
 ## to encapsulate a List[Option[Int]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val loi = List(Some(1), None, Some(2), Some(3))
@@ -468,12 +474,12 @@ otli.value // same as: loi
 ---
 
 ## FlatMapping an OptionT[List, Int]
-<br>
+<br/>
 **flatMap** takes a function of type: A => OptionT[F, B]
-<br>
+<br/>
 In our case the type is: Int => OptionT[List, String]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 def fillListWith(x: Int): List[Option[String]] = List.fill(x)(Option(x.toString))
@@ -490,12 +496,12 @@ otliFlatMapped.value
 ---
 
 ## Convenience function flatMapF
-<br>
+<br/>
 **flatMapF** takes a function of type: A => F[Option[B]]
-<br>
+<br/>
 In our case the type is: Int => List[Option[String]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val otliFlatMappedF = otli.flatMapF(x => fillListWith(x))
@@ -510,8 +516,8 @@ otliFlatMappedF.value
 ---
 
 ## Mapping an OptionT[List, Int]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val otliMapped = Monad[OptionT[List, ?]].map(otli) { _.toString + "!" }
@@ -525,8 +531,8 @@ otliMapped.value
 ---
 
 ## OptionT.{isDefined isEmpty getOrElse}
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 otli.isDefined
@@ -542,8 +548,8 @@ otli.getOrElse(42)
 ---
 
 ## For comprehension with List[Option[Int]]
-<br>
-<br>
+<br/>
+<br/>
 
 ```scala
 val result4: OptionT[List, Int] = for {
@@ -567,8 +573,8 @@ result4.value
 ---
 
 ## Don't stack too many transformers!
-<br>
-<br>
+<br/>
+<br/>
 - A monad transformer is just another monad (wrapping 2 monads).
 - You can wrap the transformer into another transformer (2 Transformers = 3 monads)
 - This procedure creates a transformer stack.
@@ -578,8 +584,8 @@ result4.value
 ---
 
 ## Don't expose monad transformers to your API!
-<br>
-<br>
+<br/>
+<br/>
 - This would make your API harder to understand.
 - The user of your API may not know what a monad transformer is.
 - Just call transformer.value before you expose it.
@@ -592,21 +598,21 @@ result4.value
 ---
 
 ## Resources 1/3
-<br>
-<br>
+<br/>
+<br/>
 - Code and Slides of the Talk:
   [https://github.com/hermannhueck/monad-transformers](https://github.com/hermannhueck/monad-transformers)
 
 ---
 
 ## Resources 2/3
-<br>
+<br/>
 
 "Monad transformers down to earth"
-<br>
+<br/>
 Talk by Gabriele Petronella at Scala Days Copenhagen 2017
 
-<br>
+<br/>
 
 .center[
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jd5e71nFEZM" frameborder="0" allowfullscreen></iframe>
@@ -615,13 +621,13 @@ Talk by Gabriele Petronella at Scala Days Copenhagen 2017
 ---
 
 ## Resources 3/3
-<br>
+<br/>
 
 "FSiS Part 7 - OptionT transformer"
-<br>
+<br/>
 Live coding video tutorial by Michael Pilquist, 2015
 
-<br>
+<br/>
 
 .center[
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZNUTMabdgzo" frameborder="0" allowfullscreen></iframe>
@@ -631,8 +637,8 @@ Live coding video tutorial by Michael Pilquist, 2015
 
 class: center
 ## Thanks for Listening
-<br>
-<br>
+<br/>
+<br/>
 
 # Q &amp; A
 
