--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -595,43 +595,15 @@ result4.value
 
 # 8. Resources
 
----
+<br/>
+<br/>
 
-## Resources 1/3
-<br/>
-<br/>
-- Code and Slides of the Talk:
+- Code and Slides of this Talk:
   [https://github.com/hermannhueck/monad-transformers](https://github.com/hermannhueck/monad-transformers)
-
----
-
-## Resources 2/3
-<br/>
-
-"Monad transformers down to earth"
-<br/>
-Talk by Gabriele Petronella at Scala Days Copenhagen 2017
-
-<br/>
-
-.center[
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jd5e71nFEZM" frameborder="0" allowfullscreen></iframe>
-]
-
----
-
-## Resources 3/3
-<br/>
-
-"FSiS Part 7 - OptionT transformer"
-<br/>
-Live coding video tutorial by Michael Pilquist, 2015
-
-<br/>
-
-.center[
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZNUTMabdgzo" frameborder="0" allowfullscreen></iframe>
-]
+- "Monad transformers down to earth" - Talk by Gabriele Petronella at Scala Days Copenhagen 2017
+  [https://www.youtube.com/watch?v=jd5e71nFEZM](https://www.youtube.com/watch?v=jd5e71nFEZM)
+- "FSiS Part 7 - OptionT transformer" - Live coding video tutorial by Michael Pilquist, 2015
+  [https://www.youtube.com/watch?v=ZNUTMabdgzo](https://www.youtube.com/watch?v=ZNUTMabdgzo)
 
 ---
 
