--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -138,7 +138,7 @@ class: center
 # From Functor Composition
 # to Monad Transformers
 <br/>
-## &copy; Hermann Hueck
+## &copy; 2018 Hermann Hueck
 <br/>
 [https://github.com/hermannhueck/monad-transformers](https://github.com/hermannhueck/monad-transformers)
 
