--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -156,7 +156,8 @@ class: center
 8. Stacking Monads and Transformers
 9. Best Practices
 10. OptionT - implementation
-11. Resources
+11. Monad Transformers in Cats
+12. Resources
 
 ---
 
@@ -828,7 +829,21 @@ object OptionT {
 
 ---
 
-# 11. Resources
+# 11. Monad Transformers in Cats
+
+<br/>
+<br/>
+
+- cats.data.OptionT for Option
+- cats.data.EitherT for Either
+- cats.data.ReaderT for Reader
+- cats.data.WriterT for Writer
+- cats.data.StateT for State
+- cats.data.IdT for Id
+
+---
+
+# 12. Resources
 
 <br/>
 <br/>
