--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -836,7 +836,7 @@ object OptionT {
 
 - cats.data.OptionT for Option
 - cats.data.EitherT for Either
-- cats.data.ReaderT for Reader
+- cats.data.ReaderT for Reader (ReaderT is an alias for Kleisli)
 - cats.data.WriterT for Writer
 - cats.data.StateT for State
 - cats.data.IdT for Id
