code and slides extended

--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -1235,7 +1235,9 @@ object OptionT {
 
 # 13. Resources
 
-<br/>
+---
+
+## Resources
 <br/>
 
 - Code and Slides of this Talk:<br/>
@@ -1244,6 +1246,10 @@ object OptionT {
 - "Scala with Cats"<br/>
   Book by Noel Welsh and Dave Gurnell<br/>
   https://underscore.io/books/scala-with-cats/
+
+- "Herding Cats, day 10: Stacking Future and Either"<br/>
+  Blogpost by eed3si9n (Eugene Yokota)<br/>
+  http://eed3si9n.com/herding-cats/stacking-future-and-either.html
 
 - "Monad transformers down to earth"<br/>
   Talk by Gabriele Petronella at Scala Days Copenhagen 2017<br/>
