resources in slides extended

--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -129,7 +129,7 @@
 
 name: main-template
 layout: true
-class: left, middle, inverse
+class: left, middle
 
 ---
 
@@ -1238,11 +1238,15 @@ object OptionT {
 
 ---
 
-## Resources
+## Resources (1/2)
 <br/>
 
 - Code and Slides of this Talk:<br/>
   https://github.com/hermannhueck/monad-transformers
+
+- Cats documentation:<br/>
+  https://typelevel.org/cats/datatypes/optiont.html<br/>
+  https://typelevel.org/cats/datatypes/eithert.html<br/>
 
 - "Scala with Cats"<br/>
   Book by Noel Welsh and Dave Gurnell<br/>
@@ -1251,6 +1255,11 @@ object OptionT {
 - "Herding Cats, day 10: Stacking Future and Either"<br/>
   Blogpost by eed3si9n (Eugene Yokota)<br/>
   http://eed3si9n.com/herding-cats/stacking-future-and-either.html
+
+---
+
+## Resources (2/2)
+<br/>
 
 - "Monad transformers down to earth"<br/>
   Talk by Gabriele Petronella at Scala Days Copenhagen 2017<br/>
