README and slides updated

--- a/slides/from-functor-composition-to-monad-transformers.html
+++ b/slides/from-functor-composition-to-monad-transformers.html
@@ -152,12 +152,16 @@ https://github.com/hermannhueck/monad-transformers
 In a List[Option[A]] or Future[Option[A]] we want to access the value of type A
 conveniently without nested mapping and flatMapping.
 
-We can avoid nested mapping with composed Functors.
-Functors compose, but Monads do not! What can we do?
+We can avoid nested mapping with composed Functors and composed Applicatives.
+
+Functors compose, Applicatives compose, but Monads do not!
+
+What can we do?
 
 Monad transformers to the rescue!
 
-After going through Functor composition I show how 2 Monads are bolted together with
+After going through the composition of Functors and Applicatives
+I show how 2 Monads are bolted together with
 a Monad transformer and how to use this construct. I demonstrate this with the
 Option transformer OptionT and will end up with best practices.
 
